package main.java.hairdresserapp;

public class HairdresserApp {
    
}
