package main.java.hairdresserapp;

public class PriceCalculator {
    
}
